--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 WUZAPI_ADMIN_TOKEN=1234ABCD
 DB_USER=zpro
-DB_PASSWORD=password
-DB_NAME=zpro
+DB_PASSWORD=senha_do_banco
+DB_NAME=postgres
 DB_HOST=localhost
 DB_PORT=5432
