--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # .env
 WUZAPI_ADMIN_TOKEN=1234ABCD
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=wuzapi
+DB_USER=zpro
+DB_PASSWORD=password
+DB_NAME=zpro
 DB_HOST=localhost
 DB_PORT=5432
 TZ=America/Sao_Paulo
